[package]
name = "fhe_guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "0.19.1", default-features = false, features = [ "std" ] }
serde = { version = "1.0", features = ["derive"] }
fhe = { path = "../../lib/fhe-rs/crates/fhe" }
fhe-traits = { path = "../../lib/fhe-rs/crates/fhe-traits" }
bincode = "*"
rand = "0.8.5"
